.provarCaches/00D410000011HE0EAM/objects/rstkf__gljestdidpd__c.object
<CustomObject>
    <description>gljestdidpd__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gljestdidpd_glyear__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__gljestdidpd_period__c ) &amp; &apos;_&apos; &amp;  rstkf__gljestdidpd_stdid__r.rstkf__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__gljestdidpd_glcmp__r.Name &amp; &apos;-Year-&apos; &amp;  rstkf__gljestdidpd_glyear__r.Name &amp; &apos;-Pd-&apos; &amp;  TEXT( rstkf__gljestdidpd_period__c ) &amp; &apos;-JE-&apos; &amp;  rstkf__gljestdidpd_stdid__r.Name), 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_deffered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entry Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_defferedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deferred By</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>General Journal Entry StdID Checklists</relationshipLabel>
        <relationshipName>gljestdidpds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>General Journal Entry StdID Checklists</relationshipLabel>
        <relationshipName>gljestdidpds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>General Journal Entry StdID Checklists</relationshipLabel>
        <relationshipName>gljestdidpds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gljestdidpd_stdid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Std ID</label>
        <referenceTo>rstkf__gljestdid__c</referenceTo>
        <relationshipLabel>General Journal Entry StdID Checklists</relationshipLabel>
        <relationshipName>gljestdidpds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>General Journal Entry StdID Checklist</label>
    <listViews>
        <fullName>rstkf__RS_General_Journal_Entry_StdID_Checklists</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gljestdidpd_glcmp__c</columns>
        <columns>rstkf__gljestdidpd_glyear__c</columns>
        <columns>rstkf__gljestdidpd_period__c</columns>
        <columns>rstkf__gljestdidpd_stdid__c</columns>
        <columns>rstkf__gljestdidpd_deffered__c</columns>
        <columns>rstkf__gljestdidpd_defferedby__c</columns>
        <columns>rstkf__gljestdidpd_posted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>General Journal Entry StdID Checklists</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Journal Entry StdID Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>